bin/kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: f-t-win-service
spec:
  selector:
    app: f-t-win
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
